samples/_failures_safe/1761452090_5594a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f443f6e0.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_f443f6e0.c:147: error: expected ‘{’ at end of input
